<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">NOPEBY</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="comunidad">COMUNIDAD</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="guardar">Guardar Proyecto</string>
    <string name="hello_world">Hello, World!</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="huesos">HUESOS</string>
    <string name="importar">IMPORTAR</string>
    <string name="intencidadluz">Intensidad de Luz</string>
    <string name="intencidadsombra">Intensidad de Sombra</string>
    <string name="lluvia">Lluvia</string>
    <string name="luz">LUZ</string>
    <string name="mas">MÁS</string>
    <string name="mejoras">MEJORAS Y ERRORES</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mundo">Mundo</string>
    <string name="nieve">Nieve</string>
    <string name="nombre_proyecto">NOMBRE DEL PROYECTO</string>
    <string name="nuevo_proyecto">NUEVO PROYECTO</string>
    <string name="objetos">OBJETOS</string>
    <string name="particulas">Partículas</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="produccion">Crear Video</string>
    <string name="proyectos">PROYECTOS</string>
    <string name="search_menu_title">Search</string>
    <string name="shader">Editar Shader</string>
    <string name="shaderdos">Sin Sombra</string>
    <string name="shadertres">Sombra Anime</string>
    <string name="shaderuno">Sombreado Real</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="configuracionluzrgb">Configurar Luz</string>
    <string name="configuracionsombrargb">Configurar Sombra</string>
    <string name="intencidadluzdos">Intensidad de Luz</string>
    <string name="intencidadsombrados">Intensidad de Sombra</string>
    <string name="animar">ANIMAR</string>
    <string name="editarobjetos">Editar Objetos</string>
    <string name="trasladacionx">Traslación X</string>
    <string name="trasladaciony">Traslación Y</string>
    <string name="trasladacionz">Traslación Z</string>
    <string name="rotadox">Rotación X</string>
    <string name="rotadoy">Rotación Y</string>
    <string name="rotadoz">Rotación Z</string>
    <string name="escaladox">Escala X</string>
    <string name="escaladoy">Escala Y</string>
    <string name="escaladoz">Escala Z</string>
    <string name="creartexturas">Crear Texturas</string>
    <string name="cerrarnoguardar">Cerrar sin Guardar</string>
    <string name="texturas">Texturas</string>
    <string name="normales">Normales (.png)</string>
    <string name="normalescambiardifusa">Normales difusas</string>
    <string name="normalescambiardirectas">Normales directas</string>


</resources>
