<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/fondodos"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:textSize="15dp"
            android:textColor="@color/blanco"
            android:layout_gravity="center"
            android:id="@+id/t1"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:hint="@string/nombre_proyecto"/>
        <RadioGroup
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="300dp"
            android:layout_height="wrap_content">
            <RadioButton
                android:textSize="15dp"
                android:textColor="@color/blanco"
                android:id="@+id/rb1"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:text="@string/shaderuno"/>
            <RadioButton
                android:textSize="15dp"
                android:textColor="@color/blanco"
                android:id="@+id/rb2"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:text="@string/shaderdos"/>
            <RadioButton
                android:textSize="15dp"
                android:textColor="@color/blanco"
                android:id="@+id/rb3"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:text="@string/shadertres"/>
        </RadioGroup>
        <Button
            android:textSize="15dp"
            android:textColor="@color/blanco"
            android:layout_gravity="center"
            android:background="@color/naranja"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:text="@string/nuevo_proyecto"
            android:onClick="Crear"/>
    </LinearLayout>
</RelativeLayout>
