<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/gris"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <Button
            android:textSize="20dp"
            android:textColor="@color/negro"
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/btnAbrirObj"
            android:background="@color/blanco"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/importar"/>
        <ImageView
            android:textSize="20dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:id="@+id/impanel"
            android:background="@drawable/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"/>
        <Button
            android:textSize="20dp"
            android:textColor="@color/negro"
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/btnguardar"
            android:background="@color/blanco"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/guardar"/>
        <Button
            android:textSize="20dp"
            android:textColor="@color/negro"
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/btnTexturas"
            android:background="@color/blanco"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/texturas"/>
        <Button
            android:textSize="20dp"
            android:textColor="@color/negro"
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/normales"
            android:background="@color/blanco"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/normales"/>
        <Button
            android:textSize="20dp"
            android:textColor="@color/negro"
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/btnTexturascrear"
            android:background="@color/blanco"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/creartexturas"/>
        <TextView
            android:id="@+id/tvProgresoTextura"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textColor="@color/blanco"
            android:textSize="14sp"
            android:visibility="gone"/>
        <Button
            android:textSize="20dp"
            android:textColor="@color/negro"
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/cerrar"
            android:background="@color/blanco"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/cerrarnoguardar"/>
    </LinearLayout>
</ScrollView>
