<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.opengl.GLSurfaceView
        android:id="@+id/glSurfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="320dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="110dp"
                android:layout_height="320dp">
                <Button
                    android:textSize="12dp"
                    android:textColor="@color/rojo"
                    android:background="@color/blanco"
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/mas"
                    android:onClick="a"/>
                <Button
                    android:textSize="12dp"
                    android:textColor="@color/azul"
                    android:background="@color/blanco"
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/objetos"
                    android:onClick="b"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="110dp"
                android:layout_height="320dp">
                <Button
                    android:textSize="12dp"
                    android:textColor="@color/verdeagua"
                    android:background="@color/blanco"
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/mundo"
                    android:onClick="c"/>
                <Button
                    android:textSize="12dp"
                    android:textColor="@color/amarillo"
                    android:background="@color/blanco"
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/particulas"
                    android:onClick="d"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="110dp"
                android:layout_height="320dp">
                <Button
                    android:textSize="12dp"
                    android:textColor="@color/naranja"
                    android:background="@color/blanco"
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/shader"
                    android:onClick="e"/>
                <Button
                    android:textSize="12dp"
                    android:textColor="@color/purple_700"
                    android:background="@color/blanco"
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/produccion"
                    android:onClick="h"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="110dp"
                android:layout_height="320dp">
                <Button
                    android:textSize="12dp"
                    android:textColor="@color/negro"
                    android:background="@color/blanco"
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/animar"
                    android:onClick="g"/>

                <Button
                    android:textSize="12dp"
                    android:textColor="@color/rojo"
                    android:background="@color/blanco"
                    android:layout_width="100dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/editarobjetos"
                    android:onClick="i"/>
            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/anadir_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/LayoutTimeline"/>

        <LinearLayout
            android:id="@+id/LayoutTimeline"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_above="@+id/LayoutBajo">

            <FrameLayout
                android:id="@+id/f4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/LayoutBajo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:layout_alignParentBottom="true">
            <ImageButton
                android:textColor="@color/blanco"
                android:background="@drawable/atras"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="botonAtras"/>
            <TextView
                android:textSize="15dp"
                android:textColor="@color/negro"
                android:id="@+id/t1"
                android:background="@color/blanco"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:text="0"/>
            <Space
                android:layout_width="5dp"
                android:layout_height="5dp"/>
            <Button
                android:textColor="@color/blanco"
                android:background="@drawable/adelante"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="botonAdelante"/>
            <TextView
                android:textSize="15dp"
                android:textColor="@color/negro"
                android:id="@+id/t2"
                android:background="@color/blanco"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:text="0"/>
            <Space
                android:layout_width="5dp"
                android:layout_height="5dp"/>
            <ImageButton
                android:textColor="@color/blanco"
                android:id="@+id/botonbone"
                android:background="@drawable/boneclick"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="renderBone"/>
            <Space
                android:layout_width="5dp"
                android:layout_height="5dp"/>
            <Button
                android:textSize="20dp"
                android:textColor="@color/blanco"
                android:background="@drawable/x"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="eliminarObj"/>
            <Space
                android:layout_width="5dp"
                android:layout_height="5dp"/>
            <Button
                android:textSize="20dp"
                android:textColor="@color/blanco"
                android:background="@drawable/v"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="crearObj"/>

            <Space
                android:layout_width="10dp"
                android:layout_height="5dp"/>
            <FrameLayout
                android:id="@+id/f3"
                android:layout_width="100dp"
                android:layout_height="50dp"/>
        </LinearLayout>
    </RelativeLayout>
    <FrameLayout
        android:id="@+id/f1"
        android:layout_width="220dp"
        android:layout_height="300dp"/>
    <FrameLayout
        android:id="@+id/f2"
        android:layout_width="220dp"
        android:layout_height="300dp"
        android:layout_marginLeft="221dp"/>
</FrameLayout>
